# cqualitytoolexamples

./: README.md
clangstaticanalysis-example/: .clang-tidy  .gitignore  CMakeLists.txt
clangstaticanalysis-example/src/: adc.c  adc.h
fff-unity-cmake-example/: .clang-format  CMakeLists.txt
fff-unity-cmake-example/lib/fff/: fff.h
fff-unity-cmake-example/lib/unity/: unity_internals.h
fff-unity-cmake-example/src/: CMakeLists.txt  adc.h  bit_manipulation.h
fff-unity-cmake-example/tests/: CMakeLists.txt  test_bit_manipulation.c
fff-unity-cmake-gcov-example/: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt
fff-unity-cmake-gcov-example/lib/: CMakeLists.txt
fff-unity-cmake-gcov-example/lib/unity/: unity.c
fff-unity-cmake-gcov-example/src/: bit_manipulation.c
fff-unity-cmake-gcov-example/tests/: CMakeLists.txt
